test: fix unit tests - simplify to repository layer testing